@@ -48,7 +48,7 @@ public class SuiteScopeClusterIT extends ESIntegTestCase {
                 SEQUENCE[i] = randomLong();
             }
         } else {
-            assertEquals(CLUSTER_SEED, new Long(cluster().seed()));
+            assertEquals(CLUSTER_SEED, Long.valueOf(cluster().seed()));
             for (int i = 0; i < SEQUENCE.length; i++) {
                 assertThat(SEQUENCE[i], equalTo(randomLong()));
             }
